--- a/.github/workflows/main_petstagram.yml
+++ b/.github/workflows/main_petstagram.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
-          name: python-app
+          name: petstagram
           path: release.zip
 
   deploy:
@@ -51,7 +51,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: python-app
+          name: petstagram
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
